# gitx1

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
gitx1-wasm/: Cargo.toml
gitx1-wasm/src/: ast_checks.rs  diff_parser.rs  lib.rs  pattern_checks.rs  report.rs
landing/: package-lock.json
landing/src/app/: BentoGrid.tsx  CursorFollower.tsx  FloatingActionButton.tsx  InteractiveDemo.tsx  ShaderBackground.tsx  SidebarTab.tsx  StickyNav.tsx  globals.css  layout.tsx  page.tsx
src/analysis/: code-text-extractor.ts  master-controller.ts  slop-detector.ts
src/analysis/engines/: burstiness-engine.ts  formulaic-engine.ts  linguistic-engine.ts  nano-engine.ts  readability-engine.ts  sentiment-engine.ts  structural-engine.ts  vocabulary-engine.ts
src/background/: github-api.ts  reputation-scorer.ts  service-worker.ts
src/content/: content-script.ts  content.css  layer1-triage.ts
src/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.ts
src/types/: messages.ts
