[package]
name = "gitx1-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM-compiled structural code analyzer for AI-generated code detection"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
